--- a/app/views/errors/500.html
+++ b/app/views/errors/500.html
@@ -1,25 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Internal Server Error</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <style>
-      body {
-        display: flex !important;
-        align-items: center !important;
-        justify-content: center !important;
-        flex-direction: column !important;
-        height: 95vh !important;
-      }
-    </style>
-  </head>
 
-  <body>
-    <h2>Error 5<span role="img" aria-label="O">&#x1f635;</span><span role="img" aria-label="O">&#x1f635;</span></h2>
-    <p>
-      Internal Server Error. Please try again later.
-    </p>
-  </body>
-</html>
+<html><head><title>Oops!</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700;display=swap"><style>body{display:flex;justify-content:center;align-items:center;background-color:rgb(0,30,38);color:white;margin:0;padding:0px 30px;font-family:DM Sans,sans-serif;}h1{margin:0;font-weight:normal;}strong{display:inline-block;width:65px;}</style></head><body><h1 style="color: #34be6d;border-right:1px solid #555855;padding-right:20px;">Oops!</h1><main style="padding-left:20px;"><p>A website error has occurred, our team has been notified.</p></main></body></html>
