--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -34,6 +34,11 @@
     opacity: 0.5;
 }
 
+/* Data Table */
+.table.dataTable[class*=table-] thead th {
+    background: transparent !important;
+}
+
 /* custom scrollbar */
 ::-webkit-scrollbar {
     width: 5px;
